import os
import grpc
from concurrent import futures
import logging

# Configure logging
logging.basicConfig(
    level=logging.INFO, 
    format='%(asctime)s - %(name)s - %(levelname)s - %(message)s'
)
logger = logging.getLogger(__name__)

# Import generated gRPC modules
from proto import tts_pb2, tts_pb2_grpc

class TTSService(tts_pb2_grpc.TTSServiceServicer):
    """
    Service for generating speech from text (Text-to-Speech) in multiple languages.
    """
    
    def __init__(self):
        logger.info("Initializing TTSService")
        # Will load TTS models on-demand to save memory
        self.models = {}
        self.cache = {}
        
    def GenerateSpeech(self, request, context):
        """
        Generates speech from text in specified language and voice.
        """
        try:
            logger.info(f"Received TTS request for language: {request.language_code}")
            
            # Check cache first
            cache_key = f"{request.text}_{request.language_code}_{request.voice_id}"
            if cache_key in self.cache:
                logger.info(f"Cache hit for key: {cache_key}")
                return self.cache[cache_key]
            
            # Placeholder for actual implementation
            # TODO: Implement TTS logic using selected provider
            
            # Create a mock response for now
            response = tts_pb2.TTSResponse(
                success=True,
                message="TTS generation successful (placeholder)",
                audio_data=b"mock_audio_data",
                audio_format="mp3",
                cache_key=cache_key,
                duration_ms=2000  # 2 seconds
            )
            
            # Cache the result
            self.cache[cache_key] = response
            
            return response
            
        except Exception as e:
            logger.error(f"Error in GenerateSpeech: {str(e)}")
            context.set_code(grpc.StatusCode.INTERNAL)
            context.set_details(f"Internal error: {str(e)}")
            return tts_pb2.TTSResponse(
                success=False,
                message=f"Error: {str(e)}"
            )
    
    def HealthCheck(self, request, context):
        """
        Health check endpoint
        """
        return tts_pb2.HealthCheckResponse(
            status=True,
            message="Service is healthy"
        )

def serve():
    """
    Start the gRPC server
    """
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    tts_pb2_grpc.add_TTSServiceServicer_to_server(
        TTSService(), server
    )
    
    server_address = "[::]:50053"
    server.add_insecure_port(server_address)
    server.start()
    logger.info(f"TTS service listening on {server_address}")
    
    # Keep the server running
    try:
        server.wait_for_termination()
    except KeyboardInterrupt:
        logger.info("Server stopping...")
        server.stop(0)


if __name__ == "__main__":
    serve()
